Merge: NGEP-87 deployment server to main (#21)
* add(global): procfile heroku

* feat(global): update procfile position

* feat(global): update procfile

* feat(global): revision procfile, change name file

* feat(global): update composer

* feat(global): update procfile

* feat(global): update procfile filename and position

* feat(global): update composer

* feat(global): update procfile position

* feat(global): update procfile position

* feat(global): update config database for heroku

* feat(route): update controller routing

* feat(route): refactor routing

Co-authored-by: Mikhael <mikhael_adiputra@yahoo.com>

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "heroku/heroku-buildpack-php" : "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -32,6 +33,10 @@
             "Tests\\": "tests/"
         }
     },
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "chmod -R 777 public/"
+    ],
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
